fix: incorrect layouts on mobile devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,47 @@
 div#header {
-    height: 80px;
     padding: 10px 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
     -webkit-backdrop-filter: blur(14px);
             backdrop-filter: blur(14px);
     box-shadow: 0 .275rem .75rem -0.0625rem rgba(19, 16, 34, .06), 0 .125rem .4rem -0.0625rem rgba(19, 16, 34, .03);
-    z-index: 256;
 }
 
-div#header img#logo {
+div#header .navbar-brand {
     margin-right: 30px;
-    max-height: 60px;
 }
 
-div#header li.list-inline-item > a {
-    color: #333;
+div#header .navbar-brand img {
+    max-height: 50px;
+}
+
+div#header .navbar-toggler {
+    border: none;
+}
+
+div#header li.nav-item {
     font-size: 18px;
     margin-right: 20px;
+}
+
+div#header li.nav-item > a {
+    color: #333;
     text-decoration: none;
 }
 
 div#content {
     margin-top: 80px;
-    padding: 20px;
+}
+
+div#hero {
+    padding: 60px 0;
+}
+
+div#hero i.fa {
+    text-align: center;
+    width: 20px;
 }
 
 div.section {
-    margin-bottom: 40px;
+    padding: 40px 0;
 }
 
 div.section h2 {
@@ -46,11 +58,16 @@ td.programme p.title {
     margin-bottom: 5px;
 }
 
-td.programme .speaker img {
-    border-radius: 50%;
+td.programme .avatar {
     display: inline-block;
     max-width: 48px;
     margin-right: 10px;
+}
+
+td.programme .avatar img {
+    border-radius: 50%;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 td.programme .speaker span.position {
@@ -122,4 +139,47 @@ div#footer img {
     display: inline-block;
     max-height: 120px;
     margin-bottom: 40px;
+}
+
+@media only screen and (max-width: 991px) {
+    div#navbar {
+        height: 100vh;
+        width: 336px;
+    }
+
+    div#navbar .offcanvas-header {
+        padding: 25px;
+    }
+
+    div#navbar .offcanvas-body {
+        padding: 25px;
+    }
+
+    div#navbar .offcanvas-body li.nav-item {
+        padding: 10px 0;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    div#header #logo {
+        display: block;
+    }
+
+    div#header li.list-inline-item {
+        display: none;
+    }
+
+    div.section h2 {
+        margin-bottom: 10px;
+    }
+
+    div.card-body {
+        padding: 16px 0;
+    }
+}
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+}
+
+@media only screen and (max-width: 479px) {
 }
